--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -58,15 +58,10 @@ jobs:
           test -f public/vendor/ffmpeg/umd/ffmpeg.js
           test -f public/vendor/meyda/meyda.min.js
 
-     - name: Add favicon
-          run: |
-              set -euxo pipefail
-              mkdir -p public
-              for CAND in favicon.png assets/favicon.png static/favicon.png; do
-                if [ -f "$CAND" ]; then cp "$CAND" public/favicon.png; break; fi
-              done
-              test -f public/favicon.png
-              ls -l public | sed -n 's/^/PUBLIC: /p'
+      - name: Add favicon
+        run: |
+          mkdir -p public
+          cp favicon.png public/favicon.png
 
 
       - name: Upload Pages artifact
